--- a/main.tex
+++ b/main.tex
@@ -163,7 +163,25 @@
 
 % ----- Unnumbered front matter sections -----
 \section*{คำนำ}
-% คำนำ content goes here
+การศึกษาเรื่อง "หุ่นยนต์อเนกประสงค์ (Polyfunctional Robots)" ในรายงานฉบับนี้ได้รับการจัดทำขึ้นเพื่อเป็นส่วนหนึ่งของรายวิชา EN813761 การสัมมนาทางวิศวกรรมคอมพิวเตอร์ สาขาวิชาวิศวกรรมคอมพิวเตอร์ มหาวิทยาลัยขอนแก่น ในภาคเรียนที่ 1 ปีการศึกษา 2568
+
+ในยุคปัจจุบันที่เทคโนโลยีหุ่นยนต์มีการพัฒนาอย่างรวดเร็วและมีบทบาทสำคัญต่อการปฏิวัติอุตสาหกรรม 4.0 หุ่นยนต์อเนกประสงค์ได้กลายเป็นหัวข้อที่น่าสนใจและมีความสำคัญอย่างยิ่งในแวดวงวิศวกรรมศาสตร์ เนื่องจากแตกต่างจากหุ่นยนต์แบบดั้งเดิมที่ออกแบบมาเพื่อปฏิบัติงานเฉพาะทาง หุ่นยนต์อเนกประสงค์สามารถปรับเปลี่ยนฟังก์ชันการทำงานเพื่อรองรับภารกิจที่หลากหลายภายในระบบเดียว ซึ่งช่วยลดต้นทุนการลงทุนและเพิ่มประสิทธิภาพการใช้งานในสภาพแวดล้อมที่มีการเปลี่ยนแปลงตลอดเวลา
+
+รายงานฉบับนี้มุ่งเน้นการศึกษาและวิเคราะห์องค์ความรู้เกี่ยวกับหุ่นยนต์อเนกประสงค์จากมุมมองทางวิศวกรรม โดยครอบคลุมตั้งแต่แนวคิดพื้นฐาน สถาปัตยกรรมและการออกแบบ เทคโนโลยีหลักและระบบควบคุม ไปจนถึงการประยุกต์ใช้ในภาคอุตสาหกรรมต่างๆ การศึกษานี้ได้รวบรวมและสังเคราะห์ข้อมูลจากแหล่งวิชาการที่เชื่อถือได้มากกว่า 40 แหล่ง ซึ่งประกอบด้วยวารสารวิชาการระดับนานาชาติ รายงานการประชุมวิชาการ และมาตรฐานสากลจากองค์กรที่มีชื่อเสียง เช่น IEEE, Nature, ASME และ ISO
+
+ผู้เขียนหวังเป็นอย่างยิ่งว่ารายงานฉบับนี้จะเป็นประโยชน์ต่อนักศึกษา นักวิจัย และผู้ที่สนใจในด้านเทคโนโลยีหุ่นยนต์ขั้นสูง โดยเฉพาะอย่างยิ่งในการทำความเข้าใจแนวโน้มและทิศทางการพัฒนาหุ่นยนต์อเนกประสงค์ที่จะมีบทบาทสำคัญในอนาคต ทั้งนี้ ผู้เขียนขอขอบคุณอาจารย์ผู้สอน เพื่อนนักศึกษา และบุคคลที่เกี่ยวข้องทุกท่านที่ให้การสนับสนุนและคำแนะนำในการจัดทำรายงานฉบับนี้
+
+หากมีข้อผิดพลาดหรือข้อบกพร่องประการใด ผู้เขียนขออภัยมา ณ ที่นี้ และยินดีรับฟังข้อเสนอแนะเพื่อนำไปปรับปรุงแก้ไขในโอกาสต่อไป
+
+\vspace{1em}
+
+\begin{flushright}
+นายคมชาญ วิเศษนคร\\
+รหัสนักศึกษา 663040419-1\\
+สาขาวิชาวิศวกรรมคอมพิวเตอร์\\
+มหาวิทยาลัยขอนแก่น\\
+ภาคเรียนที่ 1 ปีการศึกษา 2568
+\end{flushright}
 
 \newpage
 
@@ -284,7 +302,7 @@
 
 การประยุกต์ใช้การคำนวณเชิงสัณฐาน (Morphological Computation) ในการออกแบบหุ่นยนต์อเนกประสงค์เป็นแนวทางที่ได้รับความสนใจเพิ่มขึ้น \textcite{sitti2021morphological} ได้ศึกษาการประยุกต์ใช้กลไกการกระจายเมล็ดพันธุ์พืชในการออกแบบหุ่นยนต์อ่อนรุ่นใหม่ที่สามารถเคลื่อนที่ได้หลายรูปแบบ เช่น การบิน การเคลื่อนคลาน และการเจาะผ่านคุณสมบัติโครงสร้างแบบพาสซีฟ
 
-\textcite{li2025finite} ได้นำเสนอการวิเคราะห์องค์ประกอบไฟไนต์และการออกแบบเพิ่มประสิทธิภาพเชิงโครงสร้างสำหรับแขนหุ่นยนต์หลายฟังก์ชันสำหรับรถขยะ การศึกษานี้แสดงให้เห็นถึงการประยุกต์ใช้เครื่องมือการวิเคราะห์ขั้นสูงในการออกแบบระบบที่ต้องรองรับการทำงานหลากหลาย โดยสามารถลดน้ำหนักลงได้ 14.28% ในขณะที่รักษาความแข็งแรงและความแกร่งตามข้อกำหนด
+\textcite{li2025finite} ได้นำเสนอการวิเคราะห์องค์ประกอบไฟไนต์และการออกแบบเพิ่มประสิทธิภาพเชิงโครงสร้างสำหรับแขนหุ่นยนต์หลายฟังก์ชันสำหรับรถขยะ การศึกษานี้แสดงให้เห็นถึงการประยุกต์ใช้เครื่องมือการวิเคราะห์ขั้นสูงในการออกแบบระบบที่ต้องรองรับการทำงานหลากหลาย โดยสามารถลดน้ำหนักลงได้ 14.28\% ในขณะที่รักษาความแข็งแรงและความแกร่งตามข้อกำหนด
 
 \subsection{เทคโนโลยีหลักและระบบควบคุม}
 
